--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 <IfModule mod_rewrite.c>
+    Header set Access-Control-Allow-Origin "*"
     RewriteEngine on
     RewriteCond %{REQUEST_URI} !^public
     RewriteRule ^(.*)$ public/$1 [L]
